--- a/.github/workflows/mystory.yml
+++ b/.github/workflows/mystory.yml
@@ -1,1 +1,8 @@
-
+name: My Story Workflows
+on:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+    jobs:
+      build:
+ runs-on: ubuntu-latest
