--- a/.github/workflows/mystory.yml
+++ b/.github/workflows/mystory.yml
@@ -23,6 +23,6 @@ jobs:
 - name: Write story
         run: |
           echo "echo "Once upon a time in a faraway land"
-		      echo "<Story Title Input> was written by <Author Name Input>"
-		      echo "This whimsical tale takes you on a journey through a magical forest where every flower could talk."
-		      echo "Will you explore its secrets?" 
+		 echo "<Rainbow Umbrella> was written by <Ann Hoang>"
+     echo "This whimsical tale takes you on a journey through a magical forest where every flower could talk."
+		 echo "Will you explore its secrets?" 
