for created workflow file

--- a/.github/workflows/mystory.yml
+++ b/.github/workflows/mystory.yml
@@ -4,9 +4,10 @@ on:
   push:
     branches:
       - main
+  pull:
     paths:
       - 'storybook/**'
-workflow_dispatch:
+  workflow_dispatch:
     inputs:
       story_title:
         description: 'Rainbow Umbrella'
