--- a/.github/workflows/mystory.yml
+++ b/.github/workflows/mystory.yml
@@ -1,32 +1,32 @@
-name: My Story Workflows
+name: My Story Workflow
 
 on:
-  pull_request:
-    paths:
-      - 'storybook/**'
-   workflow_dispatch:
-    inputs:
-      story_title:
-        description: 'Rainbow Umbrella'
-        required: true
-        type: string
-     inputs:
-       author_name:
-         description: 'Ann Hoang' 
-         required: true
-         type: string 
+ push:
+   branches:
+     - main 
+ pull_request:
+   paths:
+     - storybook/**
+ workflow_dispatch:
+   inputs:
+     story_title:
+       description: 'Rainbow Umbrella'
+       required: true
+     author_name:
+       description: 'Ann Hoang'
+       required: true
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+ build:
+   runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v3
+   steps:
+     - name: Checkout repository
+       uses: actions/checkout@v2
 
-     
-      - name: Write story
-        run: |
-          echo "Once upon a time in a faraway land"
-          echo "<Rainbow Umbrella> was written by <Ann Hoang>"
-          echo "This whimsical tale takes you on a journey through a magical forest where every flower could talk."
-		      echo "Will you explore its secrets?" 
+     - name: My story
+       run: |
+         echo "Once upon a time in a faraway land"
+         echo "${{ Rainbow Umbrella }} was written by ${{ Ann Hoang }}"
+         echo "This whimsical tale takes you on a journey through a magical forest where every flower could talk."
+         echo "Will you explore its secrets?"
